app/client/main.less
/* ... */
aside.drawer#revs {
  ol {
    list-style-type: lower-greek;

    li {
      font-size: 0.8em;
      padding: 0.3em;

      &:hover {
        background-color: hsva(0, 0, 0, 0.3);
      }

      &.active {
        background-color: hsva(0, 0, 0, 0.5);
      }
    }
  }
}

textarea {
  font-family: "Input Mono", Courier New, Courier, monospace;
  font-weight: 300;
  font-size: 0.9em;
  width: inherit;
  cursor: text;

  .noFocusBorder;
}

.noFocusBorder {
  &:focus {
    outline: none;
  }

  &::selection {
    color: hsv(hsvhue(@accent), 0.4, 0.8);
    background-color: hsva(hsvhue(@accent), 0.3, 0.3, 1);
  }

  &::-moz-selection {
    color: hsv(hsvhue(@accent), 0.8, 0.3);
    background-color: hsv(hsvhue(@accent), 0.5, 0.9);
  }
}

hr {
  border-style: solid;
  margin-bottom: 1em;
}

.label {
  font-weight: bold;
  font-size: 1.2em;
  text-transform: uppercase;
  background-color: inherit;

  display: block;
  padding: 0.2em;
  position: fixed;
  bottom: 1em;
}

// CSS-wise transparent container to satisfy react.
// TODO: remove all of them.
.container {
  display: contents;
}

// Editor.jsx
// TODO: attach at jsx level?
#editor {
  display: flex;
  width: 100%;

  textarea {
    white-space: pre;
  }
}

.rightSettingsButton
{
    
    height: max-content;
    text-align: right;

  > *{
    
    display: inline-block;
    cursor: pointer;
    transform: rotate(-90deg);
    transform-origin: left 0px bottom 0px;
  }
}

#rightSettings {
  flex: 0 0 50px;
  display: flex;
  height: 100%;
  flex-flow: column wrap;
  // align-items: flex-start;
  // TODO: make the body background white and not gray?
  background-color:lighten(@warm, 40%);
}
#transposer {
  flex:  0 0 auto;
  .phone({
    display: none;
  });
  padding: 2em;

  height: 400px;
  width: 50px;
  >* {
  // TODO: The inside of the slider should have
  // a better non collapsing centered box
  // this is only a workaround
    position: relative;
    right: -40px;
  }

  .rc-slider {
    width: 0px;
  }

  .rc-slider-mark {
    top: 2px;
    left: -75px;
  }

  .rc-slider-mark-text {
    width: 65px;
    text-align: right;
    line-height: 2.5em;
    margin-bottom: -1em !important;

    &:hover {
      color: black;
    }
  }

  .rc-slider-track {
    background-color: @accent;
  }

  .rc-slider-handle,
  .rc-slider-dot-active {
    border-color: @accent;
  }
}

.select(@mode: none;) {
  -webkit-touch-callout: @mode; /* iOS Safari */
    -webkit-user-select: @mode; /* Safari */
     -khtml-user-select: @mode; /* Konqueror HTML */
       -moz-user-select: @mode; /* Firefox */
        -ms-user-select: @mode; /* Internet Explorer/Edge */
            user-select: @mode; /* Non-prefixed version, currently supported by Chrome and Opera */
}

.scroll-vertical {
  overflow-y: auto;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  scrollbar-width: thin;
}

.scroll-horizontal {
  overflow-y: hidden;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
  scrollbar-width: thin;
}

